--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/*CSS reset*/
 html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
 del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
@@ -35,6 +36,7 @@ blockquote:before, blockquote:after, q:before, q:after {
 blockquote, q {
 	quotes: "" "";
 	}
+/*end of CSS reset*/
 
 *{
     box-sizing:border-box;
@@ -44,15 +46,15 @@ blockquote, q {
     border:1px solid grey;
     }
 
-    /*General Styles*/
+/*General Styles (great to use until you have a preference)*/
 html{
     font-size: 62.5%;
 }
 
 body{
-    font-size:;
-    line-height:;
-    color:;
+    font-size:1.6rem;
+    line-height:1.5;
+    color:#4f4f4f;
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -66,10 +68,9 @@ section{
 a{
     text-decoration:none;
 }
-/*Header SEction Styles*/
+/*Header Section Styles*/
 nav{
     padding:2% 0;
-
 }
 nav a{
     display:inline-block;
@@ -81,26 +82,29 @@ nav a{
 }
 
 .orange{
-    background-color:;
+    background-color:#FF764E;
     margin-left:10%;
 }
 .blue{
-    background-color: ;
+    background-color:#5ED3EB;
     margin:0 24%;
 }
 .yellow{
-    background-color: ;
+    background-color:#FFCD69;
     margin-right:10%;
 }
 /*Top Section Styles*/
-.top{
 
+.top{
+    position:relative;
 }
 .left img{
     border-radius:50%;
+    width:70%;
 }
 .left, .right{
     display: inline-block;
+    text-align:center;
 }
 .left{
     width:40%;
@@ -109,7 +113,13 @@ nav a{
 .right{
     width:45%; 
     margin-left:3%;
-    position:relative;
+    position:absolute;
     top:40%;
+}
+/*background image section*/
+.heroImg{
+    height:40vh;
+    background-image:url('assets/footer_img.jpg');
+    background-repeat:no-repeat;
     
 }
